# rbot280_vrx

./: .gitignore  .hgignore  frames.gv
rbot280/: CMakeLists.txt  README.md  bag_bringup.launch  frames.gv  package.xml
rbot280/config/: CmdVelPID.cfg  Cmd_Vel_PID.cfg  DesiredHdgSpd.cfg  component_config.xacro  component_config.yaml  gmapping_params.yaml  my_wamv.urdf
rbot280/launch/: #rbot280_bringup.launch#  #wamv_control.launch#  .#rbot280_bringup.launch  bag_bringup.launch  differential_drive_sim.launch  pointcloud_to_laserscan.launch  rbot280_bringup.launch  test_pid.launch  wamv_amcl.launch  wamv_control.launch  wamv_gmapping.launch  wamv_hector.launch  wamv_localization.launch  wamv_move_base.launch  wamv_rviz.launch  wamv_slam.launch
rbot280/maps/: #gmapping_wamv_4.yaml#  aerialMIT_map.yaml  areialMIT_map.yaml  gazebo_map_edited.yaml  gmapping_5.pgm  gmapping_5.yaml  gmapping_wamv_1.pgm  gmapping_wamv_1.yaml  gmapping_wamv_2.pgm  gmapping_wamv_2.yaml  gmapping_wamv_3.pgm  gmapping_wamv_3.yaml  gmapping_wamv_3_edited.pgm  gmapping_wamv_4.pgm  gmapping_wamv_4.yaml  gmapping_wamv_4_cropped.pgm  gmapping_wamv_4_cropped.yaml
rbot280/nodes/: .#key2thrust_angle.py  cmd_vel_pid.py  desired_heading_speed.py  diff_drive_control.py  diff_drive_control_vel.py  diff_drive_control_yaw.py  simple_controller.py  test_pid.py  (+1 more)
rbot280_detect/: CMakeLists.txt  package.xml
rbot_msgs/: CMakeLists.txt  package.xml  setup.py
rbot_msgs/msg/: Classification.msg
rbot_msgs/src/: utils.py
rex4_wamv/: component_config.xacro  component_config.yaml  rex4_wamv.urdf
(+44 files in other folders)
